--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ dataset = "data"
 corpus = "line.toml"
 index = "idx"
 
-
+query-judgements = "data/queryrelevance.txt"
 
 [[analyzers]]
 method = "ngram-word"
