--- a/idx/inv/config.toml
+++ b/idx/inv/config.toml
@@ -1,12 +1,21 @@
-index = "idx"
-corpus = "line.toml"
-stop-words = "stopwords.txt"
-dataset = "data"
 prefix = "."
-[query-runner]
-	query-id-start = 1
-	query-path = "movies_sample_queries.txt"
+stop-words = "stopwords.txt"
+
+dataset = "data"
+corpus = "line.toml"
+index = "idx"
+
+query-judgements = "data/queryrelevance.txt"
+
 [[analyzers]]
-	filter = "default-unigram-chain"
-	ngram = 1
-	method = "ngram-word"
+method = "ngram-word"
+ngram = 1
+filter = "default-unigram-chain"
+
+[query-runner]
+query-path = "data/movies_sample_queries.txt"
+query-id-start = 1
+
+
+
+
